--- a/HospitalAPI/Views/Pacientes/Index.cshtml
+++ b/HospitalAPI/Views/Pacientes/Index.cshtml
@@ -16,13 +16,10 @@
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Edad)
+                @Html.DisplayNameFor(model => model.Dni)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaNacimiento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sintomas)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
@@ -55,13 +52,10 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Edad)
+                @Html.DisplayFor(modelItem => item.Dni)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sintomas)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Estado)
