--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
@@ -40,9 +40,8 @@
     <div class="pacientes-container">
       <div *ngFor="let paciente of pacientesEncontrados" class="paciente-info">
         <p><strong>Nombre:</strong> {{ paciente.Nombre }}</p>
-        <p><strong>Edad:</strong> {{ paciente.Edad }}</p>
+        <p><strong>DNI:</strong> {{ paciente.Dni }}</p>
         <p><strong>Fecha de Nacimiento:</strong> {{ paciente.FechaNacimiento | date: 'dd/MM/yyyy' }}</p>
-        <p><strong>Síntomas:</strong> {{ paciente.Sintomas }}</p>
         <p><strong>Estado:</strong> {{ paciente.Estado }}</p>
         <p><strong>Seguridad Social:</strong> {{ paciente.SeguridadSocial }}</p>
         <p><strong>Dirección:</strong> {{ paciente.Direccion }}</p>
@@ -68,17 +67,12 @@
 
       <div class="form-group">
         <label>Edad:</label>
-        <input type="number" [(ngModel)]="pacienteSeleccionado.Edad" name="Edad" required />
+        <input type="number" [(ngModel)]="pacienteSeleccionado.Dni" name="Dni" required />
       </div>
 
       <div class="form-group">
         <label>Fecha de Nacimiento:</label>
         <input type="date" [(ngModel)]="pacienteSeleccionado.FechaNacimiento" name="FechaNacimiento" required />
-      </div>
-
-      <div class="form-group">
-        <label>Síntomas:</label>
-        <textarea [(ngModel)]="pacienteSeleccionado.Sintomas" name="Sintomas"></textarea>
       </div>
 
       <div class="form-group">
