--- a/HospitalAPI/Views/Pacientes/Details.cshtml
+++ b/HospitalAPI/Views/Pacientes/Details.cshtml
@@ -17,22 +17,16 @@
             @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Edad)
+            @Html.DisplayNameFor(model => model.Dni)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Edad)
+            @Html.DisplayFor(model => model.Dni)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaNacimiento)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaNacimiento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sintomas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sintomas)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Estado)
