--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.css
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.css
@@ -1,10 +1,10 @@
 .search-section, .edit-section, .consulta-section {
-  max-width: 600px;
-  margin: 20px auto;
-  padding: 15px;
-  border: 1px solid #ccc;
+  background-color: rgb(228, 224, 224);
+  padding: 20px;
+  margin: 20px;
   border-radius: 10px;
-  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
+  margin-bottom: 20px;
 }
 
 .search-form, .consulta-section form, .edit-section form {
@@ -63,7 +63,7 @@
 }
 
 .submit-btn, .update-btn {
-  background-color: #17a2b8;
+  background-color: #007bff;
 }
 
 .cancel-btn {
@@ -72,4 +72,7 @@
 
 button:focus {
   outline: none;
+}
+.submit-btn:hover {
+  background-color: #0056b3;
 }
