--- a/ClientApp/src/app/controlador-camas/pages/controlador-camas-inicio/controlador-camas-inicio.component.css
+++ b/ClientApp/src/app/controlador-camas/pages/controlador-camas-inicio/controlador-camas-inicio.component.css
@@ -1,31 +1,35 @@
 .dashboard-section {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .table th, .table td {
-    padding: 12px;
-    border: 1px solid #ddd;
-  }
-  
-  .table th {
-    background-color: #0078d4;
-    color: white;
-  }
-  
-  .error-message {
-    color: red;
-  }
-  
-  .no-results {
-    margin-top: 20px;
-    color: gray;
-  }
-  
+  background-color: rgb(228, 224, 224);
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
+  margin-bottom: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 5px;
+}
+
+.table th,
+.table td {
+  padding: 12px;
+  border: 1px solid #ccc; 
+}
+
+.table th {
+  background-color: #0078d4;
+  color: white;
+  border-radius: 5px;
+}
+
+.error-message {
+  color: red;
+}
+
+.no-results {
+  margin-top: 20px;
+  color: gray;
+}
