--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
@@ -66,8 +66,8 @@
       </div>
 
       <div class="form-group">
-        <label>Edad:</label>
-        <input type="number" [(ngModel)]="pacienteSeleccionado.Dni" name="Dni" required />
+        <label>DNI:</label>
+        <input type="text" [(ngModel)]="pacienteSeleccionado.Dni" name="Dni" required />
       </div>
 
       <div class="form-group">
@@ -116,11 +116,7 @@
       <div class="form-group">
         <label for="id-medico">ID Médico</label>
         <select [(ngModel)]="consulta.IdMedico" name="IdMedico" required>
-          <option [value]="5">Dr. Carlos García</option>
-          <option [value]="6">Dra. Ana Martínez</option>
-          <option [value]="7">Dr. Juan Pérez</option>
-          <option [value]="8">Dra. Laura Sánchez</option>
-          <option [value]="9">Dr. Luis Fernández</option>
+          <option [value]="6">Dr. Mario Fernández</option>
         </select>
       </div>
 
