--- a/ClientApp/src/app/shared/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.html
@@ -4,11 +4,8 @@
 
   <!-- Filtro y botón de agregar paciente -->
   <div class="filter-container">
-    <input type="text" placeholder="Buscar Paciente..." [(ngModel)]="filtro" (ngModelChange)="aplicarFiltroNombre($event)">
+    <input type="text" placeholder="Buscar Paciente/Dni..." [(ngModel)]="filtro" (ngModelChange)="aplicarFiltro($event)">
 
-    <div class="ver-mas-bt">
-      <button (click)="toggleMostrarMas()" class="btn-ver-mas">{{ mostrarMas ? 'Ver Menos' : 'Ver Más' }}</button>
-    </div>
 
     <button (click)="toggleFormularioAgregar()" class="btn-agregar">
     Agregar Paciente
@@ -22,13 +19,12 @@
         <tr>
           <th (click)="ordenar('IdPaciente')">ID Paciente <span *ngIf="columnaOrdenada === 'IdPaciente'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th (click)="ordenar('Nombre')">Nombre <span *ngIf="columnaOrdenada === 'Nombre'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('Dni')">Edad <span *ngIf="columnaOrdenada === 'Dni'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Dni')">Dni <span *ngIf="columnaOrdenada === 'Dni'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th (click)="ordenar('FechaNacimiento')">Fecha de Nacimiento <span *ngIf="columnaOrdenada === 'FechaNacimiento'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th (click)="ordenar('Estado')">Estado <span *ngIf="columnaOrdenada === 'Estado'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th (click)="ordenar('FechaRegistro')">Fecha de Registro <span *ngIf="columnaOrdenada === 'FechaRegistro'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th (click)="ordenar('SeguridadSocial')">Seguridad Social <span *ngIf="columnaOrdenada === 'SeguridadSocial'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th>Acciones</th>
-          <th *ngIf="mostrarMas">Más Información</th>
         </tr>
       </thead>
       <tbody>
@@ -43,25 +39,79 @@
           <td>
             <button (click)="toggleActualizarPaciente(paciente)">Actualizar</button>
             <button (click)="borrarPaciente(paciente.IdPaciente)">Borrar</button>
-          </td>
-          <td *ngIf="mostrarMas">
-            <div>
-              <p>Dirección: {{ paciente.Direccion }}</p>
-              <p>Teléfono: {{ paciente.Telefono }}</p>
-              <p>Email: {{ paciente.Email }}</p>
-            </div>
+            <button (click)="mostrarDetallesPaciente(paciente)">Ver más</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 
-  <!-- Barra de paginación -->
-  <div class="pagination">
-    <button (click)="paginaAnterior()" [disabled]="paginaActual === 1">Anterior</button>
-    <span>Página {{paginaActual}} de {{totalPaginas}}</span>
-    <button (click)="paginaSiguiente()" [disabled]="paginaActual === totalPaginas">Siguiente</button>
+  <!-- Pop-up para mostrar detalles -->
+  <div *ngIf="pacienteSeleccionado" class="popup-overlay" (click)="cerrarPopup()">
+    <div class="popup" (click)="$event.stopPropagation()">
+      <header class="popup-header">
+        <h2>Detalles del Paciente</h2>
+        <button (click)="cerrarPopup()" class="btn-close" aria-label="Cerrar">&times;</button>
+      </header>
+      <div class="popup-body">
+        <div class="detail-item">
+          <span class="detail-label">ID Paciente:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.IdPaciente }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Nombre:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Nombre }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">DNI:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Dni }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Fecha de Nacimiento:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.FechaNacimiento | date:'dd/MM/yyyy' }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Estado:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Estado }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Fecha de Registro:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.FechaRegistro | date:'dd/MM/yyyy HH:mm\'h\'' }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Seguridad Social:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.SeguridadSocial }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Dirección:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Direccion }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Teléfono:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Telefono }}</span>
+        </div>
+        <div class="detail-item">
+          <span class="detail-label">Email:</span>
+          <span class="detail-value">{{ pacienteSeleccionado.Email }}</span>
+        </div>
+      </div>
+      
+    </div>
   </div>
+
+
+
+  <!-- Navegación de Paginación -->
+<div class="paginacion">
+  <button (click)="irAPrimeraPagina()" [disabled]="paginaActual === 1">Primera</button>
+  <button (click)="paginaAnterior()" [disabled]="paginaActual === 1">Anterior</button>
+
+  <!-- Mostrar la página actual y el total de páginas -->
+  <span>Página {{ paginaActual }} de {{ totalPaginas }}</span>
+
+  <button (click)="paginaSiguiente()" [disabled]="paginaActual === totalPaginas">Siguiente</button>
+  <button (click)="irALaUltimaPagina()" [disabled]="paginaActual === totalPaginas">Última</button>
+</div>
 
  <!-- Formulario de actualización paciente modal -->
 <div class="modal" *ngIf="mostrarFormularioActualizar">
@@ -69,7 +119,7 @@
     <span class="close" (click)="toggleActualizarPaciente(pacienteParaActualizar!)">&times;</span>
     <h3>Actualizar Paciente</h3>
 
-    <form (ngSubmit)="actualizarPaciente()">
+    <form (ngSubmit)="actualizarPaciente()" >
       <section>
         <div>
           <label for="idPaciente">ID Paciente:</label>
@@ -78,7 +128,7 @@
           <label for="nombre">Nombre:</label>
           <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar!.Nombre" name="nombre">
           <p></p>
-          <label for="edad">Edad:</label>
+          <label for="edad">Dni:</label>
           <input type="number" id="edad" [(ngModel)]="pacienteParaActualizar!.Dni" name="edad">
           <p></p>
           <label for="fechaNacimiento">Fecha de Nacimiento:</label>
@@ -120,8 +170,8 @@
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="nombre">
         <p></p>
-        <label for="edad">Edad:</label>
-        <input type="number" id="edad" [(ngModel)]="nuevoPaciente.Dni" name="edad">
+        <label for="edad">Dni:</label>
+        <input type="text" id="edad" [(ngModel)]="nuevoPaciente.Dni" name="edad">
         <p></p>
         <label for="fechaNacimiento">Fecha de Nacimiento:</label>
         <input type="date" id="fechaNacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento" name="fechaNacimiento">
