--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,2 +1,20 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<!-- test para ver autenticación
+<div *ngIf="authenticated">
+    <div *ngIf="isUser">
+      <h1>
+        User Content
+      </h1>
+    </div>
+    <div *ngIf="isAdmin">
+      <h1>
+        Admin Content
+      </h1>
+    </div>
+  </div>
+  <div>
+    <button *ngIf="!authenticated" (click)="login()">Login</button>
+    <button *ngIf="authenticated" (click)="logout()">Logout</button>
+  </div>
+-->
