camas y asignaciones, y nueva base de datos

--- a/ClientApp/src/app/controlador-camas/pages/controlador-camas-dashboard/controlador-camas-dashboard.component.html
+++ b/ClientApp/src/app/controlador-camas/pages/controlador-camas-dashboard/controlador-camas-dashboard.component.html
@@ -3,8 +3,8 @@
   <aside class="sidebar">
     <ul>
       <li><a routerLink="controlador-camas-inicio" routerLinkActive="active">Inicio</a></li>
-      <li><a routerLink="asignar-cama" routerLinkActive="active" title="Ver solicitudes de ingreso y asignar camas">Asignar Cama</a></li>
-      <li><a routerLink="estado-camas" routerLinkActive="active" title="Ver el estado actual de las camas (ocupadas/disponibles)">Estado de Camas</a></li>
+      <li><a routerLink="solicitudes-ingreso" routerLinkActive="active" title="Ver las solicitudes hechas por los medicos">Solicitudes de Ingreso</a></li>
+
     </ul>
   </aside>
 
