--- a/ClientApp/src/app/shared/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.html
@@ -95,7 +95,7 @@
           <span class="detail-value">{{ pacienteSeleccionado.Email }}</span>
         </div>
       </div>
-      
+
     </div>
   </div>
 
@@ -119,41 +119,65 @@
     <span class="close" (click)="toggleActualizarPaciente(pacienteParaActualizar!)">&times;</span>
     <h3>Actualizar Paciente</h3>
 
-    <form (ngSubmit)="actualizarPaciente()" >
-      <section>
-        <div>
-          <label for="idPaciente">ID Paciente:</label>
-          <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar!.IdPaciente" name="idPaciente" disabled>
-          <p></p>
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar!.Nombre" name="nombre">
-          <p></p>
-          <label for="edad">Dni:</label>
-          <input type="number" id="edad" [(ngModel)]="pacienteParaActualizar!.Dni" name="edad">
-          <p></p>
-          <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-          <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar!.FechaNacimiento" name="fechaNacimiento">
-          <p></p>
-          <label for="estado">Estado:</label>
-          <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar!.Estado" name="estado">
-        </div><p></p><div>
-          <label for="seguridadSocial">Seguridad Social:</label>
-          <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar!.SeguridadSocial" name="seguridadSocial">
-          <p></p>
-          <label for="direccion">Dirección:</label>
-          <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar!.Direccion" name="direccion">
-          <p></p>
-          <label for="telefono">Teléfono:</label>
-          <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar!.Telefono" name="telefono">
-          <p></p>
-          <label for="email">Email:</label>
-          <input type="email" id="email" [(ngModel)]="pacienteParaActualizar!.Email" name="email">
-          <p></p>
-          <label for="historialMedico">Historial Médico:</label>
-          <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar!.HistorialMedico" name="historialMedico">
-        </div>
-      </section>
-      <button type="submit">Guardar</button>
+<form (ngSubmit)="actualizarPaciente()" class="update-form">
+  <div class="form-container">
+    <div class="form-column">
+      <div class="form-group">
+        <label for="idPaciente">ID Paciente:</label>
+        <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar!.IdPaciente" name="idPaciente" disabled>
+      </div>
+
+      <div class="form-group">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar!.Nombre" name="nombre">
+      </div>
+
+      <div class="form-group">
+        <label for="edad">DNI:</label>
+        <input type="text" id="dni" [(ngModel)]="pacienteParaActualizar!.Dni" name="dni">
+      </div>
+
+      <div class="form-group">
+        <label for="fechaNacimiento">Fecha de Nacimiento:</label>
+        <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar!.FechaNacimiento" name="fechaNacimiento">
+      </div>
+
+      <div class="form-group">
+        <label for="estado">Estado:</label>
+        <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar!.Estado" name="estado">
+      </div>
+    </div>
+
+    <div class="form-column">
+      <div class="form-group">
+        <label for="seguridadSocial">Seguridad Social:</label>
+        <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar!.SeguridadSocial" name="seguridadSocial">
+      </div>
+
+      <div class="form-group">
+        <label for="direccion">Dirección:</label>
+        <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar!.Direccion" name="direccion">
+      </div>
+
+      <div class="form-group">
+        <label for="telefono">Teléfono:</label>
+        <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar!.Telefono" name="telefono">
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" [(ngModel)]="pacienteParaActualizar!.Email" name="email">
+      </div>
+
+      <div class="form-group">
+        <label for="historialMedico">Historial Médico:</label>
+        <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar!.HistorialMedico" name="historialMedico">
+      </div>
+    </div>
+  </div>
+  <button type="submit" class="submit-btn">Guardar</button>
+
+
     </form>
   </div>
 </div>
@@ -162,44 +186,61 @@
   <div class="modal" *ngIf="mostrarFormularioAgregar">
     <div class="modal-content">
       <span class="close" (click)="toggleFormularioAgregar()">&times;</span>
-      <h3>Agregar Paciente</h3>
+      <h2>Registro de Paciente</h2>
+      <form (submit)="registerPatient($event)" class="register-form" #pacienteForm="ngForm">
+        <div class="form-container">
+          <div class="form-column">
+            <div class="form-group">
+              <label for="nombre">Nombre*</label>
+              <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="Nombre" required placeholder="Nombre del paciente" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Nombre']?.invalid" class="error-message">El nombre es requerido.</div>
+            </div>
 
-      <form (ngSubmit)="agregarPaciente()">
-        <section>
-          <div>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="nombre">
-        <p></p>
-        <label for="edad">Dni:</label>
-        <input type="text" id="edad" [(ngModel)]="nuevoPaciente.Dni" name="edad">
-        <p></p>
-        <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-        <input type="date" id="fechaNacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento" name="fechaNacimiento">
-        <p></p>
-        <label for="estado">Estado:</label>
-        <input type="text" id="estado" [(ngModel)]="nuevoPaciente.Estado" name="estado">
-        <p></p>
-        <label for="fechaRegistro">Fecha de Registro:</label>
-        <input type="date" id="fechaRegistro" [(ngModel)]="nuevoPaciente.FechaRegistro" name="fechaRegistro">
-         </div><p></p><div>
-        <label for="seguridadSocial">Seguridad Social:</label>
-        <input type="text" id="seguridadSocial" [(ngModel)]="nuevoPaciente.SeguridadSocial" name="seguridadSocial">
-       <p></p>
+            <div class="form-group">
+              <label for="edad">DNI*</label>
+              <input type="text" id="dni" [(ngModel)]="nuevoPaciente.Dni" name="Dni" required placeholder="DNI del paciente" min="0" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Dni']?.invalid" class="error-message">Por favor, ingresa una edad válida.</div>
+            </div>
 
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.Direccion" name="direccion">
-        <p></p>
-        <label for="telefono">Teléfono:</label>
-        <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.Telefono" name="telefono">
-        <p></p>
-        <label for="email">Email:</label>
-        <input type="email" id="email" [(ngModel)]="nuevoPaciente.Email" name="email">
-        <p></p>
-        <label for="historialMedico">Historial Médico:</label>
-        <input type="text" id="historialMedico" [(ngModel)]="nuevoPaciente.HistorialMedico" name="historialMedico">
+            <div class="form-group">
+              <label for="fecha-nacimiento">Fecha de Nacimiento*</label>
+              <input type="date" id="fecha-nacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento" name="FechaNacimiento" required />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['FechaNacimiento']?.invalid" class="error-message">La fecha de nacimiento es requerida.</div>
+            </div>
+
+            <div class="form-group">
+              <label for="seguridad-social">Número de Seguridad Social*</label>
+              <input type="text" id="seguridad-social" [(ngModel)]="nuevoPaciente.SeguridadSocial" name="SeguridadSocial" required minlength="12" maxlength="12" placeholder="Número de Seguridad Social" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['SeguridadSocial']?.invalid" class="error-message">El número de seguridad social debe tener 12 dígitos.</div>
+            </div>
+          </div>
+          <div class="form-column">
+            <div class="form-group">
+              <label for="direccion">Dirección</label>
+              <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.Direccion" name="Direccion" required placeholder="Dirección del paciente" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Direccion']?.invalid" class="error-message">La dirección es requerida.</div>
+            </div>
+
+            <div class="form-group">
+              <label for="telefono">Teléfono</label>
+              <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.Telefono" name="Telefono" required placeholder="Teléfono de contacto" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Telefono']?.invalid" class="error-message">El teléfono es requerido.</div>
+            </div>
+
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" [(ngModel)]="nuevoPaciente.Email" name="Email" required placeholder="Correo electrónico" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Email']?.invalid" class="error-message">El correo electrónico es inválido.</div>
+            </div>
+
+            <div class="form-group">
+              <label for="historial-medico">Historial Médico</label>
+              <textarea id="historial-medico" [(ngModel)]="nuevoPaciente.HistorialMedico" name="HistorialMedico" required placeholder="Historial médico del paciente"></textarea>
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['HistorialMedico']?.invalid" class="error-message">El historial médico es requerido.</div>
+            </div>
+          </div>
         </div>
-      </section>
-        <button type="submit">Agregar</button>
+        <button type="submit" class="submit-btn">Registrar Paciente</button>
       </form>
     </div>
   </div>
