adding filter by date on historial altas

--- a/ClientApp/src/app/shared/camas/camas.component.html
+++ b/ClientApp/src/app/shared/camas/camas.component.html
@@ -4,7 +4,7 @@
     <div class="filters-container">
       <div class="search-container">
         <label for="searchUbicacion">Buscar por ubicación:</label>
-        <input placeholder="Ubicación" type="text" id="searchUbicacion" (input)="filtrarPorUbicacion($event)">
+        <input placeholder="Ubicación" name="searchUbicacion" type="text" id="searchUbicacion" (input)="filtrarPorUbicacion($event)">
       </div>
       
       <div class="filter-container">
